# tap

./: .gitignore  Cargo.toml  README.md  temp.rs
.github/workflows/: ci_cd.yml
src/: cli.rs  expand.rs  file_ops.rs  glob_utils.rs  lib.rs  main.rs  mode.rs  ops.rs  output.rs  permissions.rs  report.rs  times.rs  timestamp.rs
tests/: e2e.rs
