[package]
name = "tap"
version = "2.0.0"
edition = "2021"
rust-version = "1.74"
authors = ["Brayden Moon <crazywolf132@gmail.com>"]
description = "Make paths exist - a modern, friendly replacement for touch"
license = "MIT"
repository = "https://github.com/crazywolf132/tap"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.5", features = ["derive", "wrap_help"] }
clap_complete = "4.5"
filetime = "0.2"
glob = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true

[lib]
name = "tap"
path = "src/lib.rs"

[[bin]]
name = "tap"
path = "src/main.rs"

[package.metadata.deb]
maintainer = "Brayden Moon <crazywolf132@gmail.com>"
copyright = "2024, Brayden Moon <crazywolf132@gmail.com>"
license-file = ["LICENSE", "4"]
extended-description = """
Make paths exist. A modern, friendly replacement for the Unix touch command:
create files and directories (with parents), seed content safely, set
permissions and timestamps, and get structured output for scripts."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/tap", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/tap/README.md", "644"],
    ["LICENSE", "usr/share/doc/tap/LICENSE", "644"],
]

[package.metadata.generate-rpm]
name = "tap"
license = "MIT"
release = "1"
epoch = "0"
summary = "Make paths exist - a modern, friendly replacement for touch"
description = """
Make paths exist. A modern, friendly replacement for the Unix touch command:
create files and directories (with parents), seed content safely, set
permissions and timestamps, and get structured output for scripts."""
